// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Logic Components | MainPanel.Graph Graph 1`] = `
Array [
  <div
    className="graphstyle__GraphWrapper-q2z1zw-0 fllSFp graphWrapper"
  >
    <div
      className="graphstyle__GraphHeaderContainer-q2z1zw-5 cILmTD"
    >
      <h2
        className="graphstyle__GraphHeader-q2z1zw-6 deTbWo"
      >
        ID: 1
      </h2>
    </div>
    <div
      className="graphstyle__GraphNavigationWrapper-q2z1zw-7 bKzRXJ"
    >
      <button
        className="graphstyle__GraphToogleViewButton-q2z1zw-8 ilLuND"
        onClick={[Function]}
      >
        GRAPH VIEW
      </button>
      <button
        className="graphstyle__GraphToogleViewButton-q2z1zw-8 iryJsX"
        onClick={[Function]}
      >
        PERFORMANCE VIEW
      </button>
    </div>
    <div
      className="graphstyle__GraphContent-q2z1zw-1 gQkVkL"
    >
      <div
        className="graphstyle__GraphContainer-q2z1zw-2 iawPQF"
      >
        <div
          className="graphstyle__NodesGraph-q2z1zw-3 enRoVV"
        />
        <button
          className="graphstyle__LegendIcon-q2z1zw-9 htaaFb"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info-circle fa-w-16 "
            data-icon="info-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="graphstyle__PerformanceTimeLineContainer-q2z1zw-4 fhXiXV"
      >
        <div
          className="timelinestyle__Timeline-sc-1d4j339-0 dkcVis"
          tabIndex="0"
        />
      </div>
    </div>
    <div
      className="graphstyle__GraphAdditionalPanel-q2z1zw-10 kNLTzx"
    >
      <div
        className="graphstyle__GraphAdditionalPanelCloseButton-q2z1zw-13 igeLFZ"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="graphstyle__GraphAdditionalPanelHeader-q2z1zw-11 fGziiV"
      >
        <h2>
          <span>
            Node info
          </span>
        </h2>
      </div>
      <div
        className="graphstyle__GraphAdditionalPanelContent-q2z1zw-12 BLkjY"
      >
        <div
          className="nodeInfostyle__NodeIndoContainer-sc-9f2nme-0 arjhb"
        />
      </div>
    </div>
    <div
      className="graphstyle__GraphAdditionalPanel-q2z1zw-10 kNLTzx"
    >
      <div
        className="graphstyle__GraphAdditionalPanelCloseButton-q2z1zw-13 igeLFZ"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="graphstyle__GraphAdditionalPanelHeader-q2z1zw-11 fGziiV"
      >
        <h2>
          Legend
        </h2>
      </div>
      <div
        className="graphstyle__GraphAdditionalPanelContent-q2z1zw-12 BLkjY"
      >
        <div
          className="legendstyle__LegendContainer-sc-2p0nok-0 lcaAoB"
          id="legend"
        >
          <div
            className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
          >
            <h3
              className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
            >
              Nodes
            </h3>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__SquareIcon-sc-2p0nok-5 luOWj"
                  color="#FAC05E"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                missing
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__SquareIcon-sc-2p0nok-5 kVeUgY"
                  color="#707070"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                unprocessed
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__SquareIcon-sc-2p0nok-5 gnggMx"
                  color="#59CD90"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                success
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__SquareIcon-sc-2p0nok-5 UPUVE"
                  color="#DE3C4B"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                error
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__SquareIcon-sc-2p0nok-5 ANnke"
                  color="#3FA7D6"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                other
              </span>
            </div>
          </div>
          <div
            className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
          >
            <h3
              className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
            >
              Composites
            </h3>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__CircleIcon-sc-2p0nok-6 dRbgWV"
                  color="white"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                startNode
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__CircleIcon-sc-2p0nok-6 MMPLn"
                  color="multi"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                endNode
              </span>
            </div>
          </div>
          <div
            className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
          >
            <h3
              className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
            >
              Labels
            </h3>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__RectangleIcon-sc-2p0nok-7 iJchvz"
                  color="#59CD90"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                _success
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__RectangleIcon-sc-2p0nok-7 XZETK"
                  color="#DE3C4B"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                _error
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__RectangleIcon-sc-2p0nok-7 gmSFtY"
                  color="#3FA7D6"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                _[custom]
              </span>
            </div>
          </div>
          <div
            className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
          >
            <h3
              className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
            >
              Edges
            </h3>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__LineIcon-sc-2p0nok-8 jCKHOx"
                  color="black"
                  shape="solid"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                processed
              </span>
            </div>
            <div
              className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
            >
              <div
                className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
              >
                <div
                  className="legendstyle__LineIcon-sc-2p0nok-8 fELJEd"
                  color="grey"
                  shape="dashed"
                />
              </div>
              <span
                className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
              >
                unprocessed
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`Storyshots Logic Components | MainPanel.Graph.Legend Legend 1`] = `
Array [
  <div
    className="legendstyle__LegendContainer-sc-2p0nok-0 lcaAoB"
    id="legend"
  >
    <div
      className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
    >
      <h3
        className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
      >
        Nodes
      </h3>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__SquareIcon-sc-2p0nok-5 luOWj"
            color="#FAC05E"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          missing
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__SquareIcon-sc-2p0nok-5 kVeUgY"
            color="#707070"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          unprocessed
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__SquareIcon-sc-2p0nok-5 gnggMx"
            color="#59CD90"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          success
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__SquareIcon-sc-2p0nok-5 UPUVE"
            color="#DE3C4B"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          error
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__SquareIcon-sc-2p0nok-5 ANnke"
            color="#3FA7D6"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          other
        </span>
      </div>
    </div>
    <div
      className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
    >
      <h3
        className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
      >
        Composites
      </h3>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__CircleIcon-sc-2p0nok-6 dRbgWV"
            color="white"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          startNode
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__CircleIcon-sc-2p0nok-6 MMPLn"
            color="multi"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          endNode
        </span>
      </div>
    </div>
    <div
      className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
    >
      <h3
        className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
      >
        Labels
      </h3>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__RectangleIcon-sc-2p0nok-7 iJchvz"
            color="#59CD90"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          _success
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__RectangleIcon-sc-2p0nok-7 XZETK"
            color="#DE3C4B"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          _error
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__RectangleIcon-sc-2p0nok-7 gmSFtY"
            color="#3FA7D6"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          _[custom]
        </span>
      </div>
    </div>
    <div
      className="legendstyle__LegendSectionContainer-sc-2p0nok-2 jPpZiY"
    >
      <h3
        className="legendstyle__LegendHeader-sc-2p0nok-1 hbhUqJ"
      >
        Edges
      </h3>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__LineIcon-sc-2p0nok-8 jCKHOx"
            color="black"
            shape="solid"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          processed
        </span>
      </div>
      <div
        className="legendstyle__LegendItem-sc-2p0nok-3 hhFywR"
      >
        <div
          className="legendstyle__LegendItemIcon-sc-2p0nok-4 eMzyJg"
        >
          <div
            className="legendstyle__LineIcon-sc-2p0nok-8 fELJEd"
            color="grey"
            shape="dashed"
          />
        </div>
        <span
          className="legendstyle__LegendItemDescription-sc-2p0nok-9 agOwT"
        >
          unprocessed
        </span>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`Storyshots Logic Components | MainPanel.Graph.NodeInfo NodeInfo 1`] = `
Array [
  <div
    className="nodeInfostyle__NodeIndoContainer-sc-9f2nme-0 arjhb"
  />,
  <div />,
]
`;

exports[`Storyshots Logic Components | MainPanel.Graph.NodePerformanceTimeline NodePerformanceTimeline 1`] = `
Array [
  <div
    className="timelinestyle__Timeline-sc-1d4j339-0 dkcVis"
    tabIndex="0"
  />,
  <div />,
]
`;

exports[`Storyshots Logic Components | SidePanel SidePanel 1`] = `
Array [
  <div
    className="sidePanelstyle__SidePanelWrapper-ov50bf-0 hpfiQX"
  >
    <button
      className="sidePanelstyle__CloseSidePanelButton-ov50bf-4 iFHyTb"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
    <div
      className="sidePanelstyle__SidePanelContent-ov50bf-5 ffHymL"
    >
      <div
        className="fragmentListstyle__FragmentListWrapper-k1cyov-0 dylJmn"
      >
        <h1>
          List of fragments
        </h1>
        <div
          className="fragmentListstyle__SortingWrapper-k1cyov-1 jyZJgM"
        >
          <button
            className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__NarrowSortingButton-k1cyov-3 jemWhn hBPdJR"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
              data-icon="long-arrow-alt-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 256 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <button
            className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__NarrowSortingButton-k1cyov-3 jemWhn hBPdJR"
          >
            <span
              className="tableHeaderName"
            >
              #
            </span>
          </button>
          <button
            className="fragmentListstyle__SortingButton-k1cyov-2 jemWhn"
            onClick={[Function]}
          >
            <span
              className="tableHeaderName"
            >
              NAME
            </span>
            <span
              className="tableHeaderIcon"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
                data-icon="long-arrow-alt-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 256 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </button>
          <button
            className="fragmentListstyle__SortingButton-k1cyov-2 jemWhn"
            onClick={[Function]}
          >
            <span
              className="tableHeaderName"
            >
              TYPE
            </span>
            <span
              className="tableHeaderIcon"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
                data-icon="long-arrow-alt-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 256 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </button>
          <button
            className="fragmentListstyle__SortingButton-k1cyov-2 jemWhn"
            onClick={[Function]}
          >
            <span
              className="tableHeaderName"
            >
              TIME
            </span>
            <span
              className="tableHeaderIcon"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
                data-icon="long-arrow-alt-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 256 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </button>
          <button
            className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__NarrowSortingButton-k1cyov-3 fragmentListstyle__EmptySortingCell-k1cyov-4 jemWhn hBPdJR"
            tabIndex="-1"
          />
        </div>
        <div
          className="fragmentListstyle__ListItemContainer-k1cyov-5 llJnCi"
        >
          <div
            className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <div
                className="fragmentListItemstyle__Status-sc-1leslat-3 bHirrz"
              />
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  1
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  E [name]
                </span>
              </p>
              <span
                className="tableItemIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-down fa-w-14 "
                  data-icon="arrow-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  E [type]
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  5ms
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
                data-icon="arrow-circle-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                tabIndex="0"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
          >
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
          </div>
          <div
            className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <div
                className="fragmentListItemstyle__Status-sc-1leslat-3 gaXnPu"
              />
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  2
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  D [name]
                </span>
              </p>
              <span
                className="tableItemIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-down fa-w-14 "
                  data-icon="arrow-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  D [type]
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  1ms
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
                data-icon="arrow-circle-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                tabIndex="0"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
          >
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
          </div>
          <div
            className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <div
                className="fragmentListItemstyle__Status-sc-1leslat-3 geNklV"
              />
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  3
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  C [name]
                </span>
              </p>
              <span
                className="tableItemIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-down fa-w-14 "
                  data-icon="arrow-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  C [type]
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  3ms
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
                data-icon="arrow-circle-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                tabIndex="0"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
          >
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
          </div>
          <div
            className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <div
                className="fragmentListItemstyle__Status-sc-1leslat-3 gxusuT"
              />
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  4
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  B [name]
                </span>
              </p>
              <span
                className="tableItemIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-down fa-w-14 "
                  data-icon="arrow-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  B [type]
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  2ms
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
                data-icon="arrow-circle-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                tabIndex="0"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
          >
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
          </div>
          <div
            className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <div
                className="fragmentListItemstyle__Status-sc-1leslat-3 feTmeo"
              />
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  5
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  A [name]
                </span>
              </p>
              <span
                className="tableItemIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-down fa-w-14 "
                  data-icon="arrow-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  A [type]
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
            >
              <p
                className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
              >
                <span
                  className="tableItemContent"
                >
                  4ms
                </span>
              </p>
            </div>
            <div
              className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
                data-icon="arrow-circle-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                tabIndex="0"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
          >
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
            <button
              className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              DIV
            </button>
          </div>
        </div>
      </div>
      <div
        className="fragmentGanttstyle__GanntContainer-doud4f-0 guETlH fragmentGanntContainer"
      >
        <div
          className="fragmentGanttstyle__TimelineBar-doud4f-1 gtJBnx"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          <span>
            Fragments performance
          </span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          className="fragmentGanttstyle__Timeline-doud4f-2 culAuS timeline"
        />
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`Storyshots Logic Components | SidePanel.FragmentGantt FragmentGantt 1`] = `
Array [
  <div
    className="fragmentGanttstyle__GanntContainer-doud4f-0 guETlH fragmentGanntContainer"
  >
    <div
      className="fragmentGanttstyle__TimelineBar-doud4f-1 gtJBnx"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <span>
        Fragments performance
      </span>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-down fa-w-14 "
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="fragmentGanttstyle__Timeline-doud4f-2 culAuS timeline"
    />
  </div>,
  <div />,
]
`;

exports[`Storyshots Logic Components | SidePanel.FragmentList FragmentList 1`] = `
Array [
  <div
    className="fragmentListstyle__FragmentListWrapper-k1cyov-0 dylJmn"
  >
    <h1>
      List of fragments
    </h1>
    <div
      className="fragmentListstyle__SortingWrapper-k1cyov-1 jyZJgM"
    >
      <button
        className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__NarrowSortingButton-k1cyov-3 jemWhn hBPdJR"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
          data-icon="long-arrow-alt-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
      <button
        className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__NarrowSortingButton-k1cyov-3 jemWhn hBPdJR"
      >
        <span
          className="tableHeaderName"
        >
          #
        </span>
      </button>
      <button
        className="fragmentListstyle__SortingButton-k1cyov-2 jemWhn"
        onClick={[Function]}
      >
        <span
          className="tableHeaderName"
        >
          NAME
        </span>
        <span
          className="tableHeaderIcon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
            data-icon="long-arrow-alt-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </button>
      <button
        className="fragmentListstyle__SortingButton-k1cyov-2 jemWhn"
        onClick={[Function]}
      >
        <span
          className="tableHeaderName"
        >
          TYPE
        </span>
        <span
          className="tableHeaderIcon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
            data-icon="long-arrow-alt-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </button>
      <button
        className="fragmentListstyle__SortingButton-k1cyov-2 jemWhn"
        onClick={[Function]}
      >
        <span
          className="tableHeaderName"
        >
          TIME
        </span>
        <span
          className="tableHeaderIcon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
            data-icon="long-arrow-alt-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </button>
      <button
        className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__NarrowSortingButton-k1cyov-3 fragmentListstyle__EmptySortingCell-k1cyov-4 jemWhn hBPdJR"
        tabIndex="-1"
      />
    </div>
    <div
      className="fragmentListstyle__ListItemContainer-k1cyov-5 llJnCi"
    >
      <div
        className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <div
            className="fragmentListItemstyle__Status-sc-1leslat-3 bHirrz"
          />
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              1
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              E [name]
            </span>
          </p>
          <span
            className="tableItemIcon"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-down fa-w-14 "
              data-icon="arrow-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              E [type]
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              5ms
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
            data-icon="arrow-circle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            tabIndex="0"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
      >
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
      </div>
      <div
        className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <div
            className="fragmentListItemstyle__Status-sc-1leslat-3 gaXnPu"
          />
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              2
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              D [name]
            </span>
          </p>
          <span
            className="tableItemIcon"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-down fa-w-14 "
              data-icon="arrow-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              D [type]
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              1ms
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
            data-icon="arrow-circle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            tabIndex="0"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
      >
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
      </div>
      <div
        className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <div
            className="fragmentListItemstyle__Status-sc-1leslat-3 geNklV"
          />
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              3
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              C [name]
            </span>
          </p>
          <span
            className="tableItemIcon"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-down fa-w-14 "
              data-icon="arrow-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              C [type]
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              3ms
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
            data-icon="arrow-circle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            tabIndex="0"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
      >
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
      </div>
      <div
        className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <div
            className="fragmentListItemstyle__Status-sc-1leslat-3 gxusuT"
          />
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              4
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              B [name]
            </span>
          </p>
          <span
            className="tableItemIcon"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-down fa-w-14 "
              data-icon="arrow-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              B [type]
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              2ms
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
            data-icon="arrow-circle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            tabIndex="0"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
      >
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
      </div>
      <div
        className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <div
            className="fragmentListItemstyle__Status-sc-1leslat-3 feTmeo"
          />
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              5
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              A [name]
            </span>
          </p>
          <span
            className="tableItemIcon"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-down fa-w-14 "
              data-icon="arrow-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              A [type]
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
        >
          <p
            className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
          >
            <span
              className="tableItemContent"
            >
              4ms
            </span>
          </p>
        </div>
        <div
          className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
            data-icon="arrow-circle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            tabIndex="0"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
      >
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
        <button
          className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          DIV
        </button>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`Storyshots Logic Components | SidePanel.FragmentList.FragmentListItem FragmentListItem 1`] = `
Array [
  <div
    className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 gLRTNt"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div
      className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
    >
      <div
        className="fragmentListItemstyle__Status-sc-1leslat-3 gaXnPu"
      />
    </div>
    <div
      className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 JcDdY"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
      >
        <span
          className="tableItemContent"
        >
          1
        </span>
      </p>
    </div>
    <div
      className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableNameItem-sc-1leslat-5 ewOmzM flQUbD"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
      >
        <span
          className="tableItemContent"
        >
          name
        </span>
      </p>
      <span
        className="tableItemIcon"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-down fa-w-14 "
          data-icon="arrow-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
    <div
      className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
      >
        <span
          className="tableItemContent"
        >
          snippet
        </span>
      </p>
    </div>
    <div
      className="fragmentListItemstyle__TableItem-sc-1leslat-4 ewOmzM"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 jqBdGB"
      >
        <span
          className="tableItemContent"
        >
          100ms
        </span>
      </p>
    </div>
    <div
      className="fragmentListItemstyle__NarrowTableItem-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 JcDdY gLrRJR"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
        data-icon="arrow-circle-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        tabIndex="0"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>,
  <div
    className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 hvKYVN"
  >
    <button
      className="nodeListstyle__NodeButton-sc-1nrg4l-1 ipNlGh"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      DIV
    </button>
  </div>,
  <div />,
]
`;
